# cs2-demo-botmimic

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  README.md
.github/workflows/: ci.yml
converter/: Cargo.toml
converter/examples/: build_nade_library.rs  export_nades.rs  read_nade_manifest.rs
converter/src/: api.rs  demo_id.rs  demo_reader.rs  export.rs  gui.rs  gui_main.rs  lib.rs  main.rs  model.rs  nade_export.rs  nade_library.rs  pool.rs  quality.rs  rec_writer.rs  synthesis.rs  validate.rs
converter/src/analysis/: quality.rs
converter/src/cli/: mod.rs
converter/src/demo_reader/: mod.rs
converter/src/export/: mod.rs
converter/src/model/: mod.rs
converter/src/rec_writer/: mod.rs
converter/src/replay/: context.rs  synthesis.rs
css/: BotControllerNative.cs  Cs2DemoBotMimicPlugin.cs  DemoTracer.csproj  DemoTracerApiFacade.cs  DemoTracerBotHiderMemoryProbe.cs  DemoTracerCommandHelpers.cs  DemoTracerManifestModels.cs  DemoTracerManifestReaders.cs  DemoTracerNadeCommands.cs  DemoTracerPlugin.cs  DemoTracerPool.cs  DemoTracerRayTraceLosProbe.cs  DemoTracerReplayCommands.cs  DemoTracerRoundPlan.cs  DemoTracerRuntimeModels.cs  DemoTracerWeaponCatalog.cs  TeamRegistry.cs  teams.example.json
css/DemoTracer/: BotControllerBinding.cs  (+18 more)
docs/: COMMANDS.md  COMMANDS.zh-Hans.md  FORMAT.md  LIMITATIONS.md  LIMITATIONS.zh-Hans.md  README.zh-Hans.md  RELEASE_NOTES_0.3.3-beta.1.md  RELEASE_NOTES_0.3.3.md  RELEASE_NOTES_0.3.5.md  USAGE.md  USAGE.zh-Hans.md
examples/: README.md
scripts/: package-converter.ps1  package-release.ps1  package-server.ps1
(+43 files in other folders)
