[package]
name = "cs2-demotracer"
version = "0.1.1"
edition = "2021"
license = "GPL-3.0-only"
publish = false

[workspace]

[features]
default = ["demoparser"]
demoparser = ["dep:ahash", "dep:parser"]
gui = ["dep:eframe", "dep:rfd"]

[lib]
name = "cs2_demotracer"
path = "src/lib.rs"

[dependencies]
ahash = { version = "0.8", optional = true }
brotli = "8.0.3"
clap = { version = "4.5", features = ["derive"] }
dialoguer = "0.11"
eframe = { version = "0.27", optional = true }
rfd = { version = "0.14", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dependencies.parser]
path = "../third_party/demoparser/src/parser"
optional = true
